cards for places of interest

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   </head>
   <body>
     <main role="application" class="m-auto">
+      <!-- ==================== HEADER ======================== -->
       <header class="position-relative mt-4 rounded-4">
         <nav class="nav navbar navbar-expand-xlg py-4 px-5">
           <ul class="nav gap-5">
             <li>
-              <img src="./public/icons/Vector.png" alt="" />
+              <img src="./public/img/icons/Vector.png" alt="" />
               <a href="#" class="fw-medium small text-white">Find Flights</a>
             </li>
             <li>
@@ -71,7 +72,7 @@
             </button>
           </div>
           <section>
-            <form class="nav justify-content-between gap-3 mt-4">
+            <form class="nav justify-content-between gap-3 mt-4" role="form">
               <section
                 class="position-relative rounded-2 d-flex align-items-center justify-content-center gap-4 flex-grow-1">
                 <legend>From - to</legend>
@@ -144,6 +145,20 @@
           </section>
         </div>
       </header>
+
+      <!-- ==================== PLAN TRIPS ======================== -->
+      <div class="plan-trips" style="width: 90%;">
+        <section class="places">
+          <header class="content-header">
+            <h1 role="heading" class="display-6 fw-bold">Plan your perfect trip</h1>
+            <p class="lead fw-medium text-muted">Search Flights & Places Hire to our most popular destinations</p>
+
+            <section class="card-places">
+              
+            </section>
+          </header>
+        </section>
+      </div>
     </main>
 
     <script type="module" src="js/script.js"></script>
