Added details such as hotel names, star ratings, qualities, features, descriptions, and addresses for 1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main role="application" class="m-auto">
       <!-- ==================== HEADER ======================== -->
-      <header class="position-relative mt-4 rounded-4">
+      <header class="main-header position-relative mt-4 rounded-4 main">
         <nav class="nav navbar navbar-expand-xlg py-4 px-5">
           <ul class="nav gap-5">
             <li>
@@ -22,13 +22,13 @@
               <a href="#" class="fw-medium small text-white">Find Flights</a>
             </li>
             <li>
-              <img src="./public/icons/Vector (1).png" alt="" />
+              <img src="./public/img/icons/Vector (1).png" alt="" />
               <a href="#" class="fw-medium small text-white">Find Stays</a>
             </li>
           </ul>
 
           <img
-            src="./public/icons/Logo.png"
+            src="./public/img/icons/Logo.png"
             class="navbar-brand"
             alt="golobe -..." />
 
@@ -56,7 +56,7 @@
             <button
               class="py-3 px-3 fw-medium border-0 bg-transparent border-bottom border-3 border-success">
               <img
-                src="./public/icons/Vector (2).png"
+                src="./public/img/icons/Vector (2).png"
                 class="me-1"
                 alt="flight" />
               <span>Flights</span>
@@ -65,7 +65,7 @@
             <button
               class="py-3 px-3 fw-medium border-0 bg-transparent border-bottom border-3">
               <img
-                src="./public/icons/Vector (4).png"
+                src="./public/img/icons/Vector (4).png"
                 class="me-1"
                 alt="stays" />
               <span>Stays</span>
@@ -84,7 +84,7 @@
                   </div>
                   <img
                     class="pt-3 pb-2"
-                    src="./public/icons/Vector (5).png"
+                    src="./public/img/icons/Vector (5).png"
                     alt="" />
                 </div>
               </section>
@@ -134,7 +134,7 @@
                   <button
                     class="ms-3 w-auto border-0 p-2 btn-green rounded-1 small fw-bold">
                     <img
-                      src="./public/icons/show-flight.png"
+                      src="./public/img/icons/show-flight.png"
                       class="me-2"
                       alt="" />
                     Show Flights
@@ -153,7 +153,7 @@
             <h1 role="heading" class="display-6 fw-bold">Plan your perfect trip</h1>
             <p class="lead fw-medium text-muted">Search Flights & Places Hire to our most popular destinations</p>
 
-            <section class="card-places">
+            <section class="card-places" id="places">
               
             </section>
           </header>
