done with details cards

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
       <!-- ==================== PLAN TRIPS ======================== -->
       <div class="plan-trips" style="width: 90%">
         <section class="places w-100">
-          <header class="content-header nav align-items-center justify-content-between mb-5">
+          <header
+            class="content-header nav align-items-center justify-content-between mb-5">
             <div>
               <h1 role="heading" class="display-6 fw-bold">
                 Plan your perfect trip
@@ -154,16 +155,25 @@
                 Search Flights & Places Hire to our most popular destinations
               </p>
             </div>
-            <button class="btn-outline-green p-2 rounded-2 fw-medium">See more places</button>
+            <button class="btn-outline-green p-2 rounded-2 fw-medium">
+              See more places
+            </button>
           </header>
 
+          <!-- ==================== PLAN TRIPS - PLACES cards ======================== -->
           <section
-            class="card-places d-grid justify-content-between align-items-center gap-1"
+            class="card-places d-grid justify-content-between align-items-center mb-5 gap-1"
             id="places"></section>
+          <section
+            class="d-flex justify-content-between gap-4 center"
+            style="height: 500px"
+            id="bookingTravels">
+          </section>
+          <!-- ==================== PLAN TRIPS - PLACES cards ======================== -->
         </section>
       </div>
     </main>
 
-    <script type="module" src="js/script.js"></script>  
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
