finshed review cards

--- a/index.html
+++ b/index.html
@@ -196,42 +196,113 @@
               </button>
             </header>
 
-            <div class="review-cards row">
+            <div class="review-cards d-grid justify-content-between">
               <div
-                class="review-card card border-0 rounded-4 p-4 col-3">
+                class="review-card card border-0 rounded-4 p-4">
                 <div class="rev-heading nav align-items-center flex-column">
                   <figcaption>
-                    <h2 class="fw-bold">
+                    <h5 class="fw-bold fs-5">
                       <q> A real sense of community, nurtured </q>
-                    </h2>
+                    </h5>
                   </figcaption>
 
-                  <p class="text-gray fw-medium">
+                  <p class="text-gray fw-medium" style="font-size: 14px;">
                     Really appreciate the help and support from the staff during
                     these tough times. Shoutout to Katie for
                   </p>
                 </div>
                 <button class="w-auto border-0 bg-transparent w-100 text-end fw-600">View More</button>
                 <div class="ratings mb-3">
-                  <img src="./public/img/icons/star.png" alt="s" class="star" />
-                  <img src="./public/img/icons/star.png" alt="s" class="star" />
-                  <img src="./public/img/icons/star.png" alt="s" class="star" />
-                  <img src="./public/img/icons/star.png" alt="s" class="star" />
-                  <img src="./public/img/icons/star.png" alt="s" class="star" />
-                  <img src="./public/img/icons/star.png" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
                 </div>
 
                 <div class="about-user">
                   <div class="rev-user-name fw-600">Olga</div>
                   <small class="text-gray fw-500">Weave Studios - Kai Tak</small>
-                  <div class="user-comp mt-2">
+                  <div class="user-comp mt-2 mb-4">
                     <img src="./public/img/icons/google_icon.png" alt="">
                     <span class="fw-500 ms-1 text-gray">Google</span>
                   </div>
 
-                  <img src="./public/img/cards/card/review1.png" style="width: 100% ;" alt="">
+                  <img src="./public/img/cards/card/review1.png" class="pb-0" style="width: 100% ;" alt="">
                 </div>
               </div>
+              <div
+                class="review-card card border-0 rounded-4 p-4">
+                <div class="rev-heading nav align-items-center flex-column">
+                  <figcaption>
+                    <h5 class="fw-bold fs-5">
+                      <q> A real sense of community, nurtured </q>
+                    </h5>
+                  </figcaption>
+
+                  <p class="text-gray fw-medium" style="font-size: 14px;">
+                    Really appreciate the help and support from the staff during
+                    these tough times. Shoutout to Katie for
+                  </p>
+                </div>
+                <button class="w-auto border-0 bg-transparent w-100 text-end fw-600">View More</button>
+                <div class="ratings mb-3">
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                </div>
+
+                <div class="about-user">
+                  <div class="rev-user-name fw-600">Olga</div>
+                  <small class="text-gray fw-500">Weave Studios - Kai Tak</small>
+                  <div class="user-comp mt-2 mb-4">
+                    <img src="./public/img/icons/google_icon.png" alt="">
+                    <span class="fw-500 ms-1 text-gray">Google</span>
+                  </div>
+
+                  <img src="./public/img/cards/card/review1.png" class="pb-0" style="width: 100% ;" alt="">
+                </div>
+              </div>
+              <div
+                class="review-card card border-0 rounded-4 p-4">
+                <div class="rev-heading nav align-items-center flex-column">
+                  <figcaption>
+                    <h5 class="fw-bold fs-5">
+                      <q> A real sense of community, nurtured </q>
+                    </h5>
+                  </figcaption>
+
+                  <p class="text-gray fw-medium" style="font-size: 14px;">
+                    Really appreciate the help and support from the staff during
+                    these tough times. Shoutout to Katie for
+                  </p>
+                </div>
+                <button class="w-auto border-0 bg-transparent w-100 text-end fw-600">View More</button>
+                <div class="ratings mb-3">
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                  <img src="./public/img/icons/star.png" width="15" alt="s" class="star" />
+                </div>
+
+                <div class="about-user">
+                  <div class="rev-user-name fw-600">Olga</div>
+                  <small class="text-gray fw-500">Weave Studios - Kai Tak</small>
+                  <div class="user-comp mt-2 mb-4">
+                    <img src="./public/img/icons/google_icon.png" alt="">
+                    <span class="fw-500 ms-1 text-gray">Google</span>
+                  </div>
+
+                  <img src="./public/img/cards/card/review1.png" class="pb-0" style="width: 100% ;" alt="">
+                </div>
+              </div>
+              
             </div>
           </section>
         </section>
