done with review cards

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </header>
 
             <div
-              class="review-cards d-grid justify-content-center"
+              class="review-cards d-grid place-items-center"
               id="review"></div>
           </section>
         </section>
