working on footer

--- a/index.html
+++ b/index.html
@@ -203,6 +203,19 @@
         </section>
       </div>
     </main>
+    <footer class="w-100">
+      <div class="card-mailbox card border-0 m-auto" style="width: 85%;">
+        <div class="row">
+          <div class="col-8"></div>
+          <div class="col-4">
+            <img
+              src="./public/img/icons/mailbox-with-lowered-flag.png"
+              width="400"
+              alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="js/script.js"></script>
   </body>
