--- a/index.html
+++ b/index.html
@@ -203,17 +203,78 @@
         </section>
       </div>
     </main>
-    <footer class="w-100">
-      <div class="card-mailbox card border-0 m-auto" style="width: 85%;">
+    <footer class="w-100 h-auto">
+      <div class="card-mailbox card border-0 m-auto p-4 overflow-hidden rounded-4" style="width: 1150px">
         <div class="row">
-          <div class="col-8"></div>
+          <div class="col-8">
+            <h1 class="fw-600">
+              Subscribe <br />
+              Newsletter
+            </h1>
+            <h5 class="fw-600">The Travel</h5>
+            <p class="fw-500">
+              Get Inspired! Receive travel discounts, tips and behind the scenes
+              stories.
+            </p>
+
+            <form action="" class="d-flex gap-3 pt-2">
+              <input type="text" placeholder="Your email address"class="col-6 border-0 rounded-2 ps-3 py-3" />
+              <button class="btn btn-dark px-3">Subscribe</button>
+            </form>
+          </div>
           <div class="col-4">
             <img
               src="./public/img/icons/mailbox-with-lowered-flag.png"
-              width="400"
+              width="350"
               alt="" />
           </div>
         </div>
+      </div>
+
+      <div class="footer-links m-auto row place-items-center justify-content-between
+      " style="width: 1050px; margin: 0 auto;">
+        <div class="main col-2">
+          <img src="./public/img/icons/Group.png" alt="">
+
+          <div class="d-flex gap-2">
+            <img src="./public/img/icons/akar-icons_facebook-fill.png" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_twitter-fill.png" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_youtube-fill.png" width="20" alt="">
+            <img src="./public/img/icons/ant-design_instagram-filled.png" width="20" alt="">
+          </div>
+        </div>
+
+        <ul class="ft-destination col-2">
+          <h6 class="mb-3 fw-600">Our Destinations</h6>
+          <li><a href="#">Canada</a></li>
+          <li><a href="#">Alaska</a></li>
+          <li><a href="#">France</a></li>
+          <li><a href="#">Iceland</a></li>
+        </ul>
+        <ul class="ft-activities col-2">
+          <h6 class="mb-3 fw-600">Our Activities</h5>
+          <li><a href="#">Northen Lights</a></li>
+          <li><a href="#">Cruising and Sailing</a></li>
+          <li><a href="#">Multi-activies</a></li>
+          <li><a href="#">Kayaing</a></li>
+        </ul>
+        <ul class="ft-blogs col-2">
+          <h6 class="mb-3 fw-600">Travel Blogs</h5>
+          <li><a href="#">Bali Travel Guide</a></li>
+          <li><a href="#">Sri-Lanka Travel Guide</a></li>
+          <li><a href="#">Peru Travel Guide</a></li>
+          <li><a href="#">Iceland Travel Guide</a></li>
+        </ul>
+        <ul class="ft-aboutus col-2">
+          <h6 class="mb-3 fw-600">About us</h5>
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Work with us</a></li>
+        </ul>
+        <ul class="ft-contact col-2">
+          <h6 class="mb-3 fw-600">Contact Us</h5>
+          <li><a href="#">Our Story</a></li>
+          <li><a href="#">Work with us</a></li>
+        </ul>
       </div>
     </footer>
 
